add simplexml for aws sdk dependency

--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -1344,6 +1344,18 @@ RUN if [ ${INSTALL_XMLRPC} = true ]; then \
 ;fi
 
 ###########################################################################
+# SimpleXML:
+###########################################################################
+
+ARG INSTALL_SIMPLEXML=false
+
+RUN if [ ${INSTALL_SIMPLEXML} = true ]; then \
+    apt-get update -yqq && \
+    apt-get install -yqq php-xml \
+;fi
+
+
+###########################################################################
 # Check PHP version:
 ###########################################################################
 
