--- a/nginx/sites/wodtogether3-api.conf
+++ b/nginx/sites/wodtogether3-api.conf
@@ -1,11 +1,11 @@
 server {
 
     listen 80;
-    listen [::]:80 ipv6only=on;
+    # listen [::]:80 ipv6only=on;
 
     # For https
     listen 443 ssl;
-    listen [::]:443 ssl ipv6only=on;
+    # listen [::]:443 ssl ipv6only=on;
     ssl_certificate /etc/nginx/ssl/default.crt;
     ssl_certificate_key /etc/nginx/ssl/default.key;
 
